[gd_scene load_steps=4 format=2]

[ext_resource path="res://Script/Scene/Trigger/NPCTrigger.gd" type="Script" id=1]
[ext_resource path="res://Picture/Scene/NPCTrigger/NPCTrigger.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="NPCTrigger" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="textureRect1" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -64.0
margin_right = 32.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="area2D1" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="collisionShape2D1" type="CollisionShape2D" parent="area2D1"]
position = Vector2( 0, -32 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="area_entered" from="area2D1" to="." method="_on_area2D1_area_entered"]
[connection signal="area_exited" from="area2D1" to="." method="_on_area2D1_area_exited"]
